Created the models and endpoints for creating a lead in salesforce
